# tree-sitter-containerfile

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE-MIT-CamdenCheek  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  node_types.go  package-lock.json  package.json  pyproject.toml  queries.go  queries_test.go  setup.py  tree-sitter.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: clang-tidy.yml  go-compat.yml  lint.yml  publish_crates.yml  publish_npm.yml  publish_pypi.yml  swift-compat.yml  test.yml
bindings/c/: tree-sitter-containerfile.pc.in
bindings/c/tree_sitter/: tree-sitter-containerfile.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_containerfile/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterContainerfileTests/: TreeSitterContainerfileTests.swift
go-compat/: acceptance.sh
go-compat/smoke/: main.go
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: add.txt  arg.txt  cmd.txt  copy.txt  crlf.txt  entrypoint.txt  env.txt  escape.txt  expose.txt  from.txt  healthcheck.txt  heredoc.txt  keyword_boundary.txt  label.txt  onbuild.txt  run.txt  stopsignal.txt  strings.txt  user.txt  vars.txt
