[package]
name = "tree-sitter-containerfile"
description = "A Containerfile and Dockerfile grammar for tree-sitter"
version = "0.3.0"
authors = ["WharfLab"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "containerfile", "dockerfile"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/wharflab/tree-sitter-containerfile"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
  "/LICENSE-MIT-CamdenCheek",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
